--- a/gwork.maui/MainPage.xaml
+++ b/gwork.maui/MainPage.xaml
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:gwork.maui.Controls"
              x:Class="gwork.maui.MainPage">
 
     <ScrollView>
         <VerticalStackLayout
-            Padding="30,0"
+            Padding="20,10"
             Spacing="25">
-            <Label Text="Gwork"/>
+            <controls:NavBar/>
 
             <ListView x:Name="offersListView">
                 
