--- a/gwork.maui/Pages/LogInPage.xaml
+++ b/gwork.maui/Pages/LogInPage.xaml
@@ -2,11 +2,17 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="gwork.maui.Pages.LogInPage"
-             Title="LogInPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="LogInPage"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Shell.NavBarIsVisible="False">
+    <ScrollView VerticalOptions="Center">
+        <Grid RowDefinitions="auto, auto, auto, auto" ColumnDefinitions="*,*" RowSpacing="10">
+            <Label Text="Zaloguj się do G-work" Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" FontSize="16" FontAttributes="Bold"/>
+            <Label Text="Email:" Grid.Row="1" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center" FontSize="13"/>
+            <Label Text="Hasło:" Grid.Row="2" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center" FontSize="13"/>
+
+            <Entry x:Name="emailEntry" Grid.Row="1" Grid.Column="1" VerticalOptions="Center" Margin="0,0,30,0"/>
+            <Entry x:Name="lasswordEntry" Grid.Row="2" Grid.Column="1" IsPassword="True" VerticalOptions="Center" Margin="0,0,30,0"/>
+
+            <Button Text="Zaloguj się" Grid.Row="3" Grid.ColumnSpan="2" VerticalOptions="Center" HorizontalOptions="Center" FontSize="13" Clicked="LoginButtonClicked"/>
+        </Grid>
+    </ScrollView>
 </ContentPage>
