--- a/gwork.maui/Pages/RegisterPage.xaml
+++ b/gwork.maui/Pages/RegisterPage.xaml
@@ -4,21 +4,55 @@
              x:Class="gwork.maui.Pages.RegisterPage"
              Shell.NavBarIsVisible="False">
     <ScrollView VerticalOptions="Center">
-        <Grid RowDefinitions="auto, auto, auto, auto, auto, auto, auto" ColumnDefinitions="*, *" RowSpacing="10">
-            <Label Text="Zarejestruj się do G-work" Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" FontSize="16" FontAttributes="Bold"/>
-            <Label Text="Email:" Grid.Row="1" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center" FontSize="13"/>
-            <Label Text="Imie:" Grid.Row="2" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center" FontSize="13"/>
-            <Label Text="Nazwisko:" Grid.Row="3" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center" FontSize="13"/>
-            <Label Text="Hasło:" Grid.Row="4" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center" FontSize="13"/>
-            <Label Text="Powtórz hasło:" Grid.Row="5" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center" FontSize="13"/>
+        <Grid RowDefinitions="auto, auto, auto, auto, auto, auto, auto" ColumnDefinitions="*" RowSpacing="10">
+            <Label Text="Zarejestruj się do G-work" Grid.Row="0" HorizontalOptions="Center" FontSize="16" FontAttributes="Bold"/>
 
-            <Entry x:Name="emailEntry" Grid.Row="1" Grid.Column="1" VerticalOptions="Center" Margin="0,0,30,0"/>
-            <Entry x:Name="nameLabel" Grid.Row="2" Grid.Column="1" VerticalOptions="Center" Margin="0,0,30,0"/>
-            <Entry x:Name="surnameLabel" Grid.Row="3" Grid.Column="1" VerticalOptions="Center" Margin="0,0,30,0"/>
-            <Entry x:Name="passwordLabel" Grid.Row="4" Grid.Column="1" IsPassword="True" VerticalOptions="Center" Margin="0,0,30,0"/>
-            <Entry x:Name="password2Label" Grid.Row="5" Grid.Column="1" IsPassword="True" VerticalOptions="Center" Margin="0,0,30,0"/>
+            <StackLayout Orientation="Horizontal" Grid.Row="1" HorizontalOptions="Center" Spacing="10">
+                <Label Text="Email:" 
+                       VerticalOptions="Center"/>
+                <Entry x:Name="emailEntry" 
+                       VerticalOptions="Center"
+                       MinimumWidthRequest="{OnIdiom 220, Desktop=400}"/>
+            </StackLayout>
 
-            <Button Text="Zarejestruj się" Grid.Row="6" Grid.ColumnSpan="2" VerticalOptions="Center" HorizontalOptions="Center" FontSize="13" Clicked="RegisterButtonClicked"/>
+            <StackLayout Orientation="Horizontal" Grid.Row="2" HorizontalOptions="Center" Spacing="10">
+                <Label Text="Imie:" 
+                       VerticalOptions="Center"/>
+                <Entry x:Name="nameLabel" 
+                       VerticalOptions="Center"
+                       MinimumWidthRequest="{OnIdiom 220, Desktop=400}"/>
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal" Grid.Row="3" HorizontalOptions="Center" Spacing="10">
+                <Label Text="Nazwisko:" 
+                       VerticalOptions="Center"/>
+                <Entry x:Name="surnameLabel" 
+                       VerticalOptions="Center"
+                       MinimumWidthRequest="{OnIdiom 220, Desktop=400}"/>
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal" Grid.Row="4" HorizontalOptions="Center" Spacing="10">
+                <Label Text="Hasło:" 
+                       VerticalOptions="Center"/>
+                <Entry x:Name="passwordLabel" 
+                       IsPassword="True" 
+                       VerticalOptions="Center"
+                       MinimumWidthRequest="{OnIdiom 220, Desktop=400}"/>
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal" Grid.Row="5" HorizontalOptions="Center" Spacing="10">
+                <Label Text="Powtórz hasło:" 
+                       VerticalOptions="Center"/>
+                <Entry x:Name="password2Label" 
+                       IsPassword="True" 
+                       VerticalOptions="Center"
+                       MinimumWidthRequest="{OnIdiom 220, Desktop=400}"/>
+            </StackLayout>
+            
+            <Button Text="Zarejestruj się" 
+                    Grid.Row="6" Grid.ColumnSpan="2" 
+                    VerticalOptions="Center" HorizontalOptions="Center" 
+                    Clicked="RegisterButtonClicked"/>
         </Grid>
     </ScrollView>
 </ContentPage>
