--- a/gwork.maui/Pages/UserDetailsPage.xaml
+++ b/gwork.maui/Pages/UserDetailsPage.xaml
@@ -6,41 +6,48 @@
     <VerticalStackLayout VerticalOptions="Center" Padding="40">
         <Label Text="Twój profil" 
                FontSize="24" 
-               FontAttributes="Bold" 
-               HorizontalOptions="Center"/>
+               FontAttributes="Bold"/>
         <Grid RowDefinitions="{OnIdiom '*', Phone='*,*'}" ColumnDefinitions="{OnIdiom '*,*', Phone='*'}">
-            <Grid Grid.Row="0" Grid.Column="0"  
-                  RowDefinitions="*,*,*" ColumnDefinitions="*,*">
-                <Label Text="Email" 
-                       Grid.Row="0" Grid.Column="0"/>
-                <Label Text="Imię" 
-                       Grid.Row="1" Grid.Column="0"/>
-                <Label Text="Nazwisko" 
-                       Grid.Row="2" Grid.Column="0"/>
+            <Grid Grid.Row="0" Grid.Column="0"
+                  RowDefinitions="*,*,*" ColumnDefinitions="auto,auto" 
+                  ColumnSpacing="10">
+                <Label Text="Email: " 
+                       Grid.Row="0" Grid.Column="0"
+                       VerticalOptions="Center"/>
+                <Label Text="Imię: " 
+                       Grid.Row="1" Grid.Column="0"
+                       VerticalOptions="Center"/>
+                <Label Text="Nazwisko: " 
+                       Grid.Row="2" Grid.Column="0"
+                       VerticalOptions="Center"/>
 
                 <Label Text="{Binding User.Email}" 
-                       Grid.Row="0" Grid.Column="1"/>
-                <Label Text="{Binding User.Name}" 
-                       Grid.Row="1" Grid.Column="1"/>
-                <Label Text="{Binding User.Surname}"
-                       Grid.Row="2" Grid.Column="1"/>
+                       Grid.Row="0" Grid.Column="1"
+                       VerticalOptions="Center"/>
+                <Entry Text="{Binding User.Name}"
+                       Grid.Row="1" Grid.Column="1"
+                       VerticalOptions="Center"
+                       WidthRequest="200"/>
+                <Entry Text="{Binding User.Surname}" 
+                       Grid.Row="2" Grid.Column="1"
+                       VerticalOptions="Center"
+                       WidthRequest="200"/>
             </Grid>
-            <Grid Grid.Row="{OnIdiom '0', Phone='1'}" Grid.Column="{OnIdiom '1', Phone='0'}" 
-                  RowDefinitions="*,*,*" ColumnDefinitions="*,*">
-                <Label Text="Email" 
-                       Grid.Row="0" Grid.Column="0"/>
-                <Label Text="Imię" 
-                       Grid.Row="1" Grid.Column="0"/>
-                <Label Text="Nazwisko" 
-                       Grid.Row="2" Grid.Column="0"/>
 
-                <Label Text="{Binding User.Email}" 
-                       Grid.Row="0" Grid.Column="1"/>
-                <Label Text="{Binding User.Name}"
-                       Grid.Row="1" Grid.Column="1"/>
-                <Label Text="{Binding User.Surname}" 
-                       Grid.Row="2" Grid.Column="1"/>
-            </Grid>
+            <StackLayout Grid.Row="{OnIdiom '0', Phone='1'}" Grid.Column="{OnIdiom '1', Phone='0'}">
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Email:  "/>
+                    <Label Text="{Binding User.Email}"/>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Imię: "/>
+                    <Label Text="{Binding User.Name}"/>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Nazwisko: "/>
+                    <Label Text="{Binding User.Surname}"/>
+                </StackLayout>
+            </StackLayout>
         </Grid>
     </VerticalStackLayout>
 </ContentPage>
