--- a/gwork.maui/Pages/RegisterPage.xaml
+++ b/gwork.maui/Pages/RegisterPage.xaml
@@ -4,7 +4,7 @@
              x:Class="gwork.maui.Pages.RegisterPage"
              Shell.NavBarIsVisible="False">
     <ScrollView VerticalOptions="Center">
-        <Grid RowDefinitions="auto, auto, auto, auto, auto, auto, auto" ColumnDefinitions="*" RowSpacing="10">
+        <Grid RowDefinitions="auto, auto, auto, auto, auto, auto, auto, auto" ColumnDefinitions="*" RowSpacing="10">
             <Label Text="Zarejestruj się do G-work" Grid.Row="0" HorizontalOptions="Center" FontSize="16" FontAttributes="Bold"/>
 
             <StackLayout Orientation="Horizontal" Grid.Row="1" HorizontalOptions="Center" Spacing="10">
@@ -32,6 +32,14 @@
             </StackLayout>
 
             <StackLayout Orientation="Horizontal" Grid.Row="4" HorizontalOptions="Center" Spacing="10">
+                <Label Text="Nr telefonu:" 
+                       VerticalOptions="Center"/>
+                <Entry Text="{Binding PhoneNumber}" 
+                       VerticalOptions="Center"
+                       MinimumWidthRequest="{OnIdiom 220, Desktop=400}"/>   
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal" Grid.Row="5" HorizontalOptions="Center" Spacing="10">
                 <Label Text="Hasło:" 
                        VerticalOptions="Center"/>
                 <Entry Text="{Binding Password}"
@@ -40,7 +48,7 @@
                        MinimumWidthRequest="{OnIdiom 220, Desktop=400}"/>
             </StackLayout>
 
-            <StackLayout Orientation="Horizontal" Grid.Row="5" HorizontalOptions="Center" Spacing="10">
+            <StackLayout Orientation="Horizontal" Grid.Row="6" HorizontalOptions="Center" Spacing="10">
                 <Label Text="Powtórz hasło:" 
                        VerticalOptions="Center"/>
                 <Entry Text="{Binding Password2}"
@@ -50,7 +58,7 @@
             </StackLayout>
             
             <Button Text="Zarejestruj się" 
-                    Grid.Row="6" Grid.ColumnSpan="2" 
+                    Grid.Row="7" Grid.ColumnSpan="2" 
                     VerticalOptions="Center" HorizontalOptions="Center" 
                     Command="{Binding RegisterCommand}"/>
         </Grid>
