--- a/gwork.maui/Pages/UserDetailsPage.xaml
+++ b/gwork.maui/Pages/UserDetailsPage.xaml
@@ -10,7 +10,7 @@
                Margin="0,0,0,10"/>
         <Grid RowDefinitions="{OnIdiom '*', Phone='*,*'}" ColumnDefinitions="{OnIdiom '*,*', Phone='*'}">
             <Grid Grid.Row="0" Grid.Column="0"
-                  RowDefinitions="*,*,*,*,*,auto" ColumnDefinitions="auto,auto" 
+                  RowDefinitions="*,*,*,*,*,*,auto" ColumnDefinitions="auto,auto" 
                   RowSpacing="10" ColumnSpacing="10">
                 <Label Text="Email:* " 
                        Grid.Row="0" Grid.Column="0"
@@ -21,11 +21,14 @@
                 <Label Text="Nazwisko:* " 
                        Grid.Row="2" Grid.Column="0"
                        VerticalOptions="Center"/>
-                <Label Text="Nowe hasło: " 
+                <Label Text="Nr telefonu:* " 
                        Grid.Row="3" Grid.Column="0"
                        VerticalOptions="Center"/>
-                <Label Text="Powtórz hasło: " 
+                <Label Text="Nowe hasło: " 
                        Grid.Row="4" Grid.Column="0"
+                       VerticalOptions="Center"/>
+                <Label Text="Powtórz hasło: " 
+                       Grid.Row="5" Grid.Column="0"
                        VerticalOptions="Center"/>       
 
                 <Label Text="{Binding User.Email}" 
@@ -39,33 +42,36 @@
                        Grid.Row="2" Grid.Column="1"
                        VerticalOptions="Center"
                        WidthRequest="200"/>
-                <Entry Text="{Binding NewPassword}" 
+                <Entry Text="{Binding User.PhoneNumber}" 
                        Grid.Row="3" Grid.Column="1"
+                       VerticalOptions="Center"
+                       WidthRequest="200"/>
+                <Entry Text="{Binding NewPassword}" 
+                       Grid.Row="4" Grid.Column="1"
                        IsPassword="True"
                        VerticalOptions="Center"
                        WidthRequest="200"/>
                 <Entry Text="{Binding NewPasswordConfirmation}" 
-                       Grid.Row="4" Grid.Column="1"
+                       Grid.Row="5" Grid.Column="1"
                        IsPassword="True"
                        VerticalOptions="Center"
                        WidthRequest="200"/>
 
                 <Entry x:Name="passwordEntry"
                        Text="{Binding Password}"
-                       Grid.Row="5" Grid.Column="0"
+                       Grid.Row="6" Grid.Column="0"
                        IsPassword="True"
                        Placeholder="Podaj hasło*"
-                       WidthRequest="100"/>
+                       WidthRequest="130"/>
                 <Button Text="Edytuj informacje"
-                        Grid.Row="5" Grid.Column="1"
+                        Grid.Row="6" Grid.Column="1"
                         VerticalOptions="Center" HorizontalOptions="Center"
                         Command="{Binding EditUserCommand}"/>
             </Grid>
 
             <StackLayout Grid.Row="{OnIdiom '0', Phone='1'}" Grid.Column="{OnIdiom '1', Phone='0'}">
                 <StackLayout Orientation="Horizontal">
-                    <Label Text="Email:  "/>
-                    <Label Text="{Binding User.Email}"/>
+                    
                 </StackLayout>
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Imię: "/>
