--- a/gwork.maui/Pages/UserDetailsPage.xaml
+++ b/gwork.maui/Pages/UserDetailsPage.xaml
@@ -3,85 +3,91 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="gwork.maui.Pages.UserDetailsPage"
              Shell.NavBarIsVisible="False">
-    <VerticalStackLayout VerticalOptions="Center" Padding="40">
-        <Label Text="Twój profil" 
+    <ScrollView>
+        <VerticalStackLayout VerticalOptions="Center" Padding="40">
+            <Label Text="Twój profil" 
                FontSize="24" 
                FontAttributes="Bold"
                Margin="0,0,0,10"/>
-        <Grid RowDefinitions="{OnIdiom '*', Phone='*,*'}" ColumnDefinitions="{OnIdiom '*,*', Phone='*'}">
-            <Grid Grid.Row="0" Grid.Column="0"
-                  RowDefinitions="*,*,*,*,*,*,auto" ColumnDefinitions="auto,auto" 
-                  RowSpacing="10" ColumnSpacing="10">
-                <Label Text="Email:* " 
+            <Grid RowDefinitions="{OnIdiom '*', Phone='*,*'}" ColumnDefinitions="{OnIdiom '*,*', Phone='*'}">
+                <Grid Grid.Row="0" Grid.Column="0"
+                      RowDefinitions="*,*,*,*,*,*,auto" ColumnDefinitions="auto,auto" 
+                      RowSpacing="10" ColumnSpacing="10">
+                    
+                    <Label Text="Email:* " 
                        Grid.Row="0" Grid.Column="0"
                        VerticalOptions="Center"/>
-                <Label Text="Imię:* " 
+                    <Label Text="Imię:* " 
                        Grid.Row="1" Grid.Column="0"
                        VerticalOptions="Center"/>
-                <Label Text="Nazwisko:* " 
+                    <Label Text="Nazwisko:* " 
                        Grid.Row="2" Grid.Column="0"
                        VerticalOptions="Center"/>
-                <Label Text="Nr telefonu:* " 
+                    <Label Text="Nr telefonu:* " 
                        Grid.Row="3" Grid.Column="0"
                        VerticalOptions="Center"/>
-                <Label Text="Nowe hasło: " 
+                    <Label Text="Nowe hasło: " 
                        Grid.Row="4" Grid.Column="0"
                        VerticalOptions="Center"/>
-                <Label Text="Powtórz hasło: " 
+                    <Label Text="Powtórz hasło: " 
                        Grid.Row="5" Grid.Column="0"
-                       VerticalOptions="Center"/>       
+                       VerticalOptions="Center"/>
 
-                <Label Text="{Binding User.Email}" 
+                    <Label Text="{Binding User.Email}" 
                        Grid.Row="0" Grid.Column="1"
                        VerticalOptions="Center"/>
-                <Entry Text="{Binding User.Name}"
+                    <Entry Text="{Binding User.Name}"
                        Grid.Row="1" Grid.Column="1"
                        VerticalOptions="Center"
                        WidthRequest="200"/>
-                <Entry Text="{Binding User.Surname}" 
+                    <Entry Text="{Binding User.Surname}" 
                        Grid.Row="2" Grid.Column="1"
                        VerticalOptions="Center"
                        WidthRequest="200"/>
-                <Entry Text="{Binding User.PhoneNumber}" 
+                    <Entry Text="{Binding User.PhoneNumber}" 
                        Grid.Row="3" Grid.Column="1"
                        VerticalOptions="Center"
                        WidthRequest="200"/>
-                <Entry Text="{Binding NewPassword}" 
+                    <Entry Text="{Binding NewPassword}" 
                        Grid.Row="4" Grid.Column="1"
                        IsPassword="True"
                        VerticalOptions="Center"
                        WidthRequest="200"/>
-                <Entry Text="{Binding NewPasswordConfirmation}" 
+                    <Entry Text="{Binding NewPasswordConfirmation}" 
                        Grid.Row="5" Grid.Column="1"
                        IsPassword="True"
                        VerticalOptions="Center"
                        WidthRequest="200"/>
 
-                <Entry x:Name="passwordEntry"
+                    <Entry x:Name="passwordEntry"
                        Text="{Binding Password}"
                        Grid.Row="6" Grid.Column="0"
                        IsPassword="True"
                        Placeholder="Podaj hasło*"
                        WidthRequest="130"/>
-                <Button Text="Edytuj informacje"
+                    <Button Text="Edytuj informacje"
                         Grid.Row="6" Grid.Column="1"
                         VerticalOptions="Center" HorizontalOptions="Center"
                         Command="{Binding EditUserCommand}"/>
-            </Grid>
+                </Grid>
 
-            <StackLayout Grid.Row="{OnIdiom '0', Phone='1'}" Grid.Column="{OnIdiom '1', Phone='0'}">
-                <StackLayout Orientation="Horizontal">
-                    
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Imię: "/>
-                    <Label Text="{Binding User.Name}"/>
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Nazwisko: "/>
-                    <Label Text="{Binding User.Surname}"/>
-                </StackLayout>
-            </StackLayout>
-        </Grid>
-    </VerticalStackLayout>
+                <Grid Grid.Row="{OnIdiom '0', Phone='1'}" Grid.Column="{OnIdiom '1', Phone='0'}"
+                          RowDefinitions="*,auto" ColumnDefinitions="auto, auto"
+                          RowSpacing="10" ColumnSpacing="10">
+                    <Label Text="Wykształcenie: " 
+                           Grid.Row="0" Grid.Column="0"
+                           VerticalOptions="Center"/>
+
+                    <Entry Text="{Binding EmployeeDetails.Education}"
+                           Grid.Row="0" Grid.Column="1"
+                           VerticalOptions="Center"
+                           WidthRequest="200"/>
+
+                    <Button Text="Edytuj informacje"
+                            Grid.Row="1" Grid.ColumnSpan="2"
+                            Command="{Binding EditEmployeeDetailsCommand}"/>
+                </Grid>
+            </Grid>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
