--- a/gwork.maui/Pages/UserDetailsPage.xaml
+++ b/gwork.maui/Pages/UserDetailsPage.xaml
@@ -9,7 +9,8 @@
                FontSize="24" 
                FontAttributes="Bold"
                Margin="0,0,0,10"/>
-            <Grid RowDefinitions="{OnIdiom '*', Phone='*,*'}" ColumnDefinitions="{OnIdiom '*,*', Phone='*'}" ColumnSpacing="20">
+            <Grid RowDefinitions="{OnIdiom '*', Phone='*,*'}" ColumnDefinitions="{OnIdiom '*,*', Phone='*'}" 
+                  ColumnSpacing="20" RowSpacing="15">
                 <Grid Grid.Row="0" Grid.Column="0"
                       RowDefinitions="*,*,*,*,*,*,auto" ColumnDefinitions="auto,*" 
                       RowSpacing="10" ColumnSpacing="10">
