--- a/gwork.maui/MainPage.xaml
+++ b/gwork.maui/MainPage.xaml
@@ -35,24 +35,26 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <Frame BorderColor="{DynamicResource Primary}" BackgroundColor="Transparent">
-                                <Grid HeightRequest="180" RowDefinitions="auto, auto, *, auto" RowSpacing="5">
+                                <Grid HeightRequest="180" RowDefinitions="auto, auto, *, auto" RowSpacing="3">
                                     <StackLayout Grid.Row="0">
                                         <Label Text="{Binding PositionName}" FontAttributes="Bold" FontSize="16" TextColor="{AppThemeBinding Light={StaticResource SecondaryDarkText}, Dark={StaticResource Secondary}}"/>
-                                        <Label Text="{Binding Firm.Name}" FontAttributes="Bold"/>
-                                        <Label Text="{Binding Firm.Location}"/>
+                                        <Label Text="{Binding FirmName}" FontAttributes="Bold"/>
+                                        <Label Text="{Binding FirmLocation}"/>
                                     </StackLayout>
                                     <StackLayout Orientation="Horizontal" Grid.Row="1">
-                                        <Label Text="{Binding SalaryLowest, StringFormat='{0} zł'}"/>
-                                        <Label Text=" - "/>
-                                        <Label Text="{Binding SalaryHighest, StringFormat=' {0} zł'}"/>
+                                        <Label Text="{Binding SalaryLowest, StringFormat='{0} zł'}" TextColor="{AppThemeBinding Light={StaticResource SecondaryDarkText}, Dark={StaticResource Secondary}}"/>
+                                        <Label Text=" -" TextColor="{AppThemeBinding Light={StaticResource SecondaryDarkText}, Dark={StaticResource Secondary}}"/>
+                                        <Label Text="{Binding SalaryHighest, StringFormat=' {0} zł'}" TextColor="{AppThemeBinding Light={StaticResource SecondaryDarkText}, Dark={StaticResource Secondary}}"/>
                                     </StackLayout>
-                                    <StackLayout Orientation="Horizontal" Grid.Row="2" HorizontalOptions="Fill">
-                                        <Label Text="{Binding Category}"/>
-                                        <Label Text=" - "/>
-                                        <Label Text="{Binding ConcractType}"/>
-                                        <Label Text=" - "/>
-                                        <Label Text="{Binding Description}"/>
-                                    </StackLayout>
+                                    <Label Grid.Row="2" HorizontalOptions="FillAndExpand" LineBreakMode="CharacterWrap">
+                                        <Label.Text>
+                                            <MultiBinding StringFormat="{}{0} | {1} | {2}">
+                                                <Binding Path="Category"/>
+                                                <Binding Path="ConcractType"/>
+                                                <Binding Path="Description"/>
+                                            </MultiBinding>
+                                        </Label.Text>
+                                    </Label>
                                     <StackLayout Orientation="Horizontal" Grid.Row="3">
                                         <Button Text="Do oferty" HorizontalOptions="StartAndExpand"/>
                                         <Label Text="{Binding ExpireDate, StringFormat='Koniec rekrutacji: {0:dd/MM/yyyy}'}" HorizontalOptions="End" VerticalTextAlignment="End"/>
@@ -63,6 +65,8 @@
                     </CollectionView.ItemTemplate>
                 </CollectionView>
             </VerticalStackLayout>
+
+            <Button Text="Dodaj ofertę" Command="{Binding GoToOffersCommand}"/>
         </VerticalStackLayout>
     </ScrollView>
 
