--- a/gwork.maui/Controls/NavBar.xaml
+++ b/gwork.maui/Controls/NavBar.xaml
@@ -2,7 +2,7 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="gwork.maui.Controls.NavBar">
-    <VerticalStackLayout>
+    <VerticalStackLayout x:Name="mainVerticalStackLayout" Spacing="10">
         <StackLayout Orientation="Horizontal">
             <Label Text="G-work" 
                    HorizontalOptions="StartAndExpand" VerticalOptions="Center" 
