--- a/gwork.maui/MainPage.xaml
+++ b/gwork.maui/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:gwork.maui.Controls"
+             xmlns:viewmodels="clr-namespace:gwork.maui.ViewModels"
              x:Class="gwork.maui.MainPage">
 
     <ScrollView>
@@ -14,7 +15,7 @@
 
             <VerticalStackLayout Spacing="20" Padding="20">
                 <HorizontalStackLayout HorizontalOptions="Center">
-                    <Label Text="1233"
+                    <Label Text="{Binding OffersCount}"
                        FontSize="26"
                        FontAttributes="Bold"
                        TextColor="{DynamicResource Primary}"/>
@@ -56,7 +57,9 @@
                                         </Label.Text>
                                     </Label>
                                     <StackLayout Orientation="Horizontal" Grid.Row="3">
-                                        <Button Text="Do oferty" HorizontalOptions="StartAndExpand"/>
+                                        <Button Text="Do oferty" HorizontalOptions="StartAndExpand" 
+                                                Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:MainPageViewModel}}, Path=GoToOfferDetailsCommand}" 
+                                                CommandParameter="{Binding .}"/>
                                         <Label Text="{Binding ExpireDate, StringFormat='Koniec rekrutacji: {0:dd/MM/yyyy}'}" HorizontalOptions="End" VerticalTextAlignment="End"/>
                                     </StackLayout>
                                 </Grid>
@@ -65,8 +68,6 @@
                     </CollectionView.ItemTemplate>
                 </CollectionView>
             </VerticalStackLayout>
-
-            <Button Text="Dodaj ofertę" Command="{Binding GoToOffersCommand}"/>
         </VerticalStackLayout>
     </ScrollView>
 
