changed ObservablePropertys and RelayCommands to private in view models

--- a/gwork.maui/Pages/OfferDetailsPage.xaml
+++ b/gwork.maui/Pages/OfferDetailsPage.xaml
@@ -5,7 +5,9 @@
              Shell.NavBarIsVisible="False">
     <ScrollView>
         <VerticalStackLayout Padding="20">
-            <Label />
+            <Label Text="{Binding Offer.PositionName}"
+                   FontSize="24"
+                   TextColor="{DynamicResource Primary}"/>
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
